# first_order_lang

./: CMakeLists.txt  readme.md
include/: default.hpp  finite_interpretation.hpp  formula.hpp  function.hpp  global.hpp  lexer.hpp  predicate.hpp  signature.hpp  term.hpp
sources/: default.cpp  finite_interpretation.cpp  formula.cpp  function.cpp  lexer.cpp  main.cpp  predicate.cpp  signature.cpp  term.cpp
